# cas_ws

./: .gitattributes  .gitignore  LICENSE  README.md  cas_setup.bash  requirements.txt
src/cas_core/: CMakeLists.txt  package.xml
src/cas_core/launch/: sim.launch
src/cas_core/src/: Recognition.py  __init__.py  frame.py  kalman.py  kalmanfilter.py  path.py  sim_helper.py  velocityCalculator.py
src/cas_simulator/: CMakeLists.txt  package.xml
src/cas_simulator/launch/: map.launch
src/cas_simulator/src/: mock_ball.py
src/cas_simulator/worlds/: cas_simulator_map.sdf
src/stingray_sim/: CMakeLists.txt  package.xml
src/stingray_sim/launch/: gazebo.launch  gazebo_base.launch  rtab.launch  slam.launch  teleop.launch  wall_following_v1.launch  wall_following_v2.launch
src/stingray_sim/models/kinect/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
src/stingray_sim/models/kinect/meshes/: kinect.dae
src/stingray_sim/models/triton/: model.config  model.sdf
src/stingray_sim/models/triton/meshes/: triton_broken.dae
src/stingray_sim/models/triton_lidar/: model.config  model.sdf
src/stingray_sim/models/triton_lidar/meshes/: triton.dae
src/stingray_sim/plugins/: CMakeLists.txt  model_push.cc
src/stingray_sim/src/: draw_path.py  position_publisher.py  teleop_robot.py
src/stingray_sim/worlds/: empty_world.world  largemaze-triton-lidar.world  largemaze-triton.world  maze_world.world  triton_world.world
